Fix build in C++17 mode

I think it's a bug, but now sure if of libstdc++ or the spec, have
opened https://gcc.gnu.org/bugzilla/show_bug.cgi?id=100384 for the gcc
people to comment on